* styles * font awesome * new menus * moved pages around

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,7 +8,7 @@ $enable-rounded: false !default;;
 $white: #f8f8f8 !default;
 $black: #404040 !default;
 
-//$blue: #007bff !default;
+$blue: #0071BC !default;
 //$indigo: #6610f2 !default;
 //$purple: #6f42c1 !default;
 //$pink: #e83e8c !default;
@@ -19,8 +19,8 @@ $black: #404040 !default;
 //$teal: #20c997 !default;
 //$cyan: #17a2b8 !default;
 
-$primary:       #6e3641 !default;
-//$secondary:     $gray-600 !default;
+$primary:       #BC4B00 !default;
+$secondary:     #0071BC !default;
 //$success:       $green !default;
 //$info:          $cyan !default;
 //$warning:       $yellow !default;
