Button and table row styles.

--- a/src/styles/_app-theme.scss
+++ b/src/styles/_app-theme.scss
@@ -9,3 +9,13 @@
 .bg-dark {
   background-color: #76776d !important;
 }
+
+.btn,
+.table.table-hover tr {
+  cursor: pointer;
+}
+
+.btn.disabled {
+  cursor: default;
+}
+
